--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "laravel/framework": "^6.0"
+      "laravel/framework": "^6.0",
+      "doctrine/dbal": "^2.3"
   },
   "autoload": {
     "psr-4": {
