--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "minimum-stability": "dev",
   "require": {
       "laravel/framework": "^6.0",
-      "doctrine/dbal": "^2.3"
+      "doctrine/dbal": "^2.3",
+      "intervention/image": "^2.6",
   },
   "autoload": {
     "psr-4": {
