--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
       "laravel/framework": "^6.0",
       "doctrine/dbal": "^2.3",
-      "intervention/image": "^2.6",
+      "intervention/image": "^2.6"
   },
   "autoload": {
     "psr-4": {
